# adamic_llm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: tests.yml
adamic_llm/: __main__.py  gunicorn_runner.py  log.py  settings.py
adamic_llm/db/dao/: dummy_dao.py
adamic_llm/services/: __init__.py
adamic_llm/services/adamic_prompting/: adamic_history.py  configuration.py  graph.py  prompts.py  state.py  utils.py
adamic_llm/services/chat/: service.py
adamic_llm/services/google_translate/: __init__.py  dependency.py  lifespan.py
adamic_llm/services/graph/: graph_registry.py  runner.py
adamic_llm/services/models/: service.py
adamic_llm/services/redis/: lifespan.py
adamic_llm/utils/: message.py
adamic_llm/web/: __init__.py  application.py  lifespan.py  openai_server.py
adamic_llm/web/api/: __init__.py  router.py
adamic_llm/web/api/chat/: __init__.py  schema.py  views.py
adamic_llm/web/api/docs/: __init__.py
adamic_llm/web/api/dummy/: __init__.py  views.py
adamic_llm/web/api/echo/: __init__.py  views.py
adamic_llm/web/api/models/: __init__.py  views.py
adamic_llm/web/api/monitoring/: __init__.py
adamic_llm/web/api/redis/: __init__.py  schema.py  views.py
benchmarks/: 01_run_NLP_tasks.sh  02_run_shareGPT.sh  LICENSE.txt  README.md
benchmarks/datasets/: languages.csv
benchmarks/datasets/global_mmlu/de/: state.json
benchmarks/datasets/global_mmlu/en/: dataset_info.json  state.json
benchmarks/datasets/global_mmlu/fa/: dataset_info.json  state.json
benchmarks/datasets/global_mmlu/fr/: state.json
benchmarks/datasets/global_mmlu/he/: state.json
benchmarks/datasets/global_mmlu/ja/: dataset_info.json  state.json
benchmarks/datasets/global_mmlu/ne/: dataset_info.json  state.json
benchmarks/datasets/global_mmlu/pl/: state.json
benchmarks/datasets/global_mmlu/si/: dataset_info.json  state.json
benchmarks/datasets/global_mmlu/sn/: dataset_info.json  state.json
benchmarks/datasets/global_mmlu/so/: dataset_info.json  state.json
benchmarks/datasets/global_mmlu/sr/: dataset_info.json  state.json
benchmarks/datasets/global_mmlu/sv/: dataset_info.json  state.json
benchmarks/datasets/global_mmlu/yo/: state.json
benchmarks/datasets/global_mmlu_full/de/: dataset_info.json
benchmarks/datasets/global_mmlu_full/en/: state.json
benchmarks/datasets/global_mmlu_full/fa/: state.json
benchmarks/datasets/global_mmlu_full/fr/: dataset_info.json
benchmarks/datasets/global_mmlu_full/he/: dataset_info.json
benchmarks/datasets/global_mmlu_full/pl/: dataset_info.json  state.json
benchmarks/datasets/global_mmlu_full/si/: dataset_info.json
benchmarks/datasets/global_mmlu_full/yo/: dataset_info.json  state.json
benchmarks/datasets/mgsm/translations_google/: mgsm_bn.tsv  mgsm_de.tsv  mgsm_es.tsv  mgsm_fr.tsv  mgsm_ja.tsv  mgsm_ru.tsv  mgsm_sw.tsv  mgsm_te.tsv  mgsm_th.tsv  mgsm_zh.tsv
benchmarks/datasets/mgsm/translations_nllb/: mgsm_bn.tsv  mgsm_de.tsv  mgsm_es.tsv  mgsm_fr.tsv  mgsm_ja.tsv  mgsm_ru.tsv  mgsm_sw.tsv  mgsm_te.tsv  mgsm_th.tsv  mgsm_zh.tsv
benchmarks/datasets/mkqa/ar/: data-00000-of-00001.arrow  state.json
benchmarks/datasets/mkqa/da/: data-00000-of-00001.arrow  state.json
benchmarks/datasets/mkqa/de/: data-00000-of-00001.arrow  state.json
benchmarks/datasets/mkqa/en/: data-00000-of-00001.arrow  state.json
benchmarks/result_tables/: cultural_sample_global_mmlu_table.csv  cultural_sample_global_mmlu_table_rounded.csv  global_mmlu_table.csv  global_mmlu_table_rounded.csv  main_table_unweighted.csv  main_table_unweighted_rounded.csv  main_table_weighted.csv  main_table_weighted_rounded.csv  mkqa_table.csv  mkqa_table_rounded.csv  mmmlu_table.csv  mmmlu_table_rounded.csv  paws-x_table.csv  paws-x_table_rounded.csv  shareGPT_all_langs.csv  shareGPT_all_langs_rounded.csv  shareGPT_claude-opus-4.7_table.csv  shareGPT_claude-opus-4.7_table_rounded.csv  shareGPT_gemini-3.5-flash_table.csv  shareGPT_gemini-3.5-flash_table_rounded.csv  shareGPT_gpt-5.5_table.csv  shareGPT_gpt-5.5_table_rounded.csv  shareGPT_main.csv  shareGPT_main_rounded.csv  xlsum_table.csv  xlsum_table_rounded.csv  xnli_table.csv  xnli_table_rounded.csv
benchmarks/result_tables-main1/: global_mmlu_table.csv  mkqa_table.csv  mmmlu_table.csv  paws-x_table.csv  xlsum_table.csv  xnli_table.csv
benchmarks/result_tables/shareGPT_percentage/: shareGPT_claude-opus-4.7_table.csv  shareGPT_claude-opus-4.7_table_rounded.csv  shareGPT_gemini-3.5-flash_table.csv  shareGPT_gemini-3.5-flash_table_rounded.csv  shareGPT_gpt-5.5_table.csv  shareGPT_gpt-5.5_table_rounded.csv
benchmarks/result_tables_test/: global_mmlu_table.csv  main_table.csv  mkqa_table.csv  mmmlu_table.csv  paws-x_table.csv  shareGPT_claude-opus-4.7_table.csv  xlsum_table.csv  xnli_table.csv
benchmarks/scripts/: __init__.py  analyze.py  classify_shareGPT.py  run_nlp_tasks.py  run_shareGPT.py  util_mkqa.py  utils.py  utils_langs.py  utils_template.py  utils_translate.py
deploy/: docker-compose.dev.yml
notebooks/: create_bench.ipynb  data_analysis_nlp.ipynb  data_analysis_userQ.ipynb
tests/: __init__.py  conftest.py  test_dummy.py  test_message.py  test_redis.py  test_redis_messages_history.py
(+542 files in other folders)
