[project]
name = "adamic_llm"
version = "0.1.0"
requires-python = ">=3.13,<3.15"
description = ""
authors = []
maintainers = []
readme = "README.md"
dependencies = [
  "fastapi >=0.122.0,<1",
  "uvicorn[standard] >=0.38.0,<1",
  "gunicorn >=23.0.0,<24",
  "pydantic >=2.12.5,<3",
  "pydantic-settings >=2.12.0,<3",
  "yarl >=1.22.0,<2",
  "ujson >=5.11.0,<6",
  "redis[hiredis] >=6,<7",
  "aiofiles >=25.1.0,<26",
  "psycopg[binary,pool] >=3.2.13,<4",
  "httptools >=0.7.1,<1",
  "pymongo >=4.15.4,<5",
  "prometheus-client >=0.23.1,<1",
  "prometheus-fastapi-instrumentator >=7.1.0,<8",
  "loguru >=0.7.3,<1",
  "langgraph>=1.1.6",
  "langchain-core>=1.2.26",
  "langfuse>=4.0.6",
  "langchain-openai>=1.1.12",
  "langchain-groq>=1.1.2",
  "langchain-ollama>=1.1.0",
  "pycountry>=26.2.16",
  "google-cloud-translate>=3.25.0",
  "langchain>=1.2.15",
  "langchain-openrouter>=0.2.1",
]

[dependency-groups]
dev-full = [
  {include-group = "testing-lint"},
  {include-group = "benchmark"},
]

testing-lint = [
  "pytest >=9.0.1,<10",
  "ruff >=0.14.6,<1",
  "mypy >=1.19.0,<2",
  "pytest-cov >=7.0.0,<8",
  "anyio >=4.11.0,<5",
  "pytest-env >=1.2.0,<2",
  "fakeredis >=2.32.1,<3",
  "httpx >=0.28.1,<1",
]

benchmark = [
  "datasets>=4.8.4",
  "groq>=0.37.1",
  "jsonlines>=4.0.0",
  "langgraph-cli[inmem]>=0.4.22",
  "matplotlib>=3.10.8",
  "notebook>=7.5.5",
  "numpy>=2.4.4",
  "openai>=2.30.0",
  "pandas>=3.0.2",
  "rouge-score>=0.1.2",
  "tenacity>=9.1.4",
  "tiktoken>=0.12.0",
  "tqdm>=4.67.3",
  "python-dotenv>=1.2.2",
  "seaborn>=0.13.2",
  "catppuccin>=2.5.0",
]


[tool.uv]
default-groups = ["dev-full"]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["adamic_llm",]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

# Remove this and add `types-redis`
# when the issue https://github.com/python/typeshed/issues/8242 is resolved.
[[tool.mypy.overrides]]
module = [
    'redis.asyncio'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-p no:unraisableexception"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
anyio_mode = "auto"
env = [
    "ADAMIC_LLM_ENVIRONMENT=pytest",
    "ADAMIC_LLM_DB_BASE=adamic_llm_test",
]

[tool.ruff]
target-version = "py313"
# List of enabled rulsets.
# See https://docs.astral.sh/ruff/rules/ for more information.
lint.select = [ "E",     # Error
    "F",     # Pyflakes
    "W",     # Pycodestyle
    "C90",   # McCabe complexity
    "I",     # Isort
    "N",     # pep8-naming
    "D",     # Pydocstyle
    "ANN",   # Pytype annotations
    "S",     # Bandit
    "B",     # Bugbear
    "C4",    # Comprehensions
    "ISC",   # Implicit string concat
    "PIE",   # Unnecessary code
    "T20",   # Catch prints
    "PYI",   # validate pyi files
    "Q",     # Checks for quotes
    "RSE",   # Checks raise statements
    "RET",   # Checks return statements
    "SLF",   # Self checks
    "SIM",   # Simplificator
    "PTH",   # Pathlib checks
    "ERA",   # Checks for commented out code
    "PL",    # PyLint checks
    "RUF",   # Specific to Ruff checks
	"FA102", # Future annotations
	"UP",	 # Python updates
]
lint.ignore = [
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "B008",    # Do not perform function calls in argument defaults
    "D211",    # No blank lines allowed before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "D401",    # First line should be in imperative mood
    "D104",    # Missing docstring in public package
    "D100",    # Missing docstring in public module
    "D202",    # No blank lines allowed after function docstring
    "ANN401",  # typing.Any are disallowed in `**kwargs
    "PLR0913", # Too many arguments for function call
    "D106",    # Missing docstring in public nested class
]
lint.mccabe = { max-complexity = 30 }
exclude = [
    ".venv/"
]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # Use of assert detected
	"PLC0415", # Import outside toplevel
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float", "bytes"]
max-statements = 100
max-branches = 30

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
]

[fastapi-template.options]
project_name = "adamic_llm"
api_type = "rest"
enable_redis = "True"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "None"
enable_taskiq = "None"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "True"
traefik_labels = "None"
add_dummy = "True"
orm = "psycopg"
self_hosted_swagger = "True"
prometheus_enabled = "True"
sentry_enabled = "None"
otlp_enabled = "None"
gunicorn = "True"
add_users = "None"
cookie_auth = "None"
jwt_auth = "None"
